--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ $(function () {
 										<td class="w50">
 						<span class="top-menu-username-wrap">
 							<img class="log-out-icon" src="./index_files/logout_1.png" onclick="return post2url(&#39;login.php&#39;, {logout: 1});" alt="" title="Выход">
-							<a id="logged-in-username" class="truncated-text" href="https://rutracker.net/forum/profile.php?mode=viewprofile&amp;u=24104595">victordeluxx</a>
+							<a id="logged-in-username" class="truncated-text" href="https://t.me/jenkemcrew">victordeluxx</a>
 						</span>
 					</td>
 					
