--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ prod. by victordeluxx																			<div class="clear">&nbsp;</div>
 	<td>Статус:</td>
 	<td style="">
 			<span id="tor-status-resp">
-				<span class="tor-icon tor-approved">&#8730;</span> <a href="https://rutracker.net/forum/viewtopic.php?t=211216#torstatus" class="med"><b>проверено</b></a>
+				<span class="tor-icon tor-approved">&#8730;</span> <a href="https://сосал?.да" class="med"><b>проверено</b></a>
 							</span>
 			</td>
 </tr>
@@ -783,8 +783,8 @@ $(function () {
 	<td class="poster_btn td3 hide-for-print">
 
 				<div style="padding: 2px 6px 4px;" class="post_btn_2">
-			<a class="txtb" href="https://https//t.me/victordeluxx">[Профиль]</a>&nbsp;
-			<a class="txtb" href="https://https//t.me/victordeluxx">[ЛС]</a>&nbsp;
+			<a class="txtb" href="https://t.me/victordeluxx">[Профиль]</a>&nbsp;
+			<a class="txtb" href="https://t.me/victordeluxx">[ЛС]</a>&nbsp;
 					</div>
 		
 	</td>
